grammar/pyparser.output
Nonterminals useless in grammar

   single_input
   newlines_star
   eval_input
   encoding_decl


Rules useless in grammar

  313 single_input: NEWLINE
  314             | simple_stmt
  315             | compound_stmt NEWLINE

  316 newlines_star: %empty
  317              | newlines_star NEWLINE

  318 eval_input: testlist newlines_star ENDMARKER

  319 encoding_decl: NAME


Rules useless in parser due to conflicts

  136 if_stmt: "if" test ':' suite


Stare 20 conflicte: 2 shift/reduce
Stare 78 conflicte: 1 shift/reduce
Stare 84 conflicte: 2 shift/reduce
Stare 85 conflicte: 1 shift/reduce
Stare 88 conflicte: 2 shift/reduce
Stare 89 conflicte: 1 shift/reduce
Stare 136 conflicte: 1 shift/reduce
Stare 218 conflicte: 1 shift/reduce
Stare 221 conflicte: 1 shift/reduce
Stare 287 conflicte: 1 shift/reduce
Stare 288 conflicte: 1 shift/reduce
Stare 321 conflicte: 1 shift/reduce
Stare 338 conflicte: 41 reduce/reduce
Stare 375 conflicte: 2 reduce/reduce
Stare 437 conflicte: 1 shift/reduce


Gramatică

    0 $accept: file_input $end

    1 file_content: NEWLINE
    2             | stmt
    3             | file_content NEWLINE
    4             | file_content stmt

    5 file_input: ENDMARKER
    6           | file_content ENDMARKER

    7 decorator: '@' dotted_name NEWLINE
    8          | '@' dotted_name '(' ')' NEWLINE
    9          | '@' dotted_name '(' arglist ')' NEWLINE

   10 decorators: decorator
   11           | decorators decorator

   12 decorated: decorators classdef
   13          | decorators funcdef
   14          | decorators async_funcdef

   15 async_funcdef: ASYNC funcdef

   16 funcdef: "def" NAME parameters ':' suite
   17        | "def" NAME parameters "->" test ':' suite

   18 parameters: '(' ')'
   19           | '(' typedargslist ')'

   20 typedargslist: typedarg
   21              | typedarg ','
   22              | typedargslist ',' typedarg

   23 typedarg: tfpdef
   24         | tfpdef '=' test

   25 tfpdef: NAME
   26       | NAME ':' test

   27 varargslist: vararg
   28            | vararg ','
   29            | varargslist ',' vararg

   30 vararg: vfpdef
   31       | vfpdef '=' test

   32 vfpdef: NAME

   33 stmt: simple_stmt
   34     | compound_stmt

   35 small_stmts_star: %empty
   36                 | small_stmts_star ';' small_stmt

   37 simple_stmt: small_stmt small_stmts_star NEWLINE
   38            | small_stmt small_stmts_star ';' NEWLINE

   39 small_stmt: expr_stmt
   40           | del_stmt
   41           | pass_stmt
   42           | flow_stmt
   43           | import_stmt
   44           | global_stmt
   45           | nonlocal_stmt
   46           | assert_stmt

   47 expr_aux: '=' yield_expr
   48         | '=' testlist_star_expr

   49 expr_aux_star: %empty
   50              | expr_aux_star expr_aux

   51 expr_stmt: testlist_star_expr annassign
   52          | testlist_star_expr augassign yield_expr
   53          | testlist_star_expr augassign testlist
   54          | testlist_star_expr expr_aux_star

   55 annassign: ':' test
   56          | ':' test '=' test

   57 testlist_star_expr: test
   58                   | star_expr
   59                   | testlist_star_expr ',' test
   60                   | testlist_star_expr ',' star_expr
   61                   | testlist_star_expr ','

   62 augassign: "+="
   63          | "-="
   64          | "*="
   65          | "@="
   66          | "/="
   67          | "%="
   68          | "&="
   69          | "|="
   70          | "^="
   71          | "<<="
   72          | ">>="
   73          | "**="
   74          | "//="

   75 del_stmt: "del" exprlist

   76 pass_stmt: "pass"

   77 flow_stmt: break_stmt
   78          | continue_stmt
   79          | return_stmt
   80          | raise_stmt
   81          | yield_stmt

   82 break_stmt: "break"

   83 continue_stmt: "continue"

   84 return_stmt: "return"
   85            | "return" testlist

   86 yield_stmt: yield_expr

   87 raise_stmt: "raise"
   88           | "raise" test
   89           | "raise" test "from" test

   90 import_stmt: import_name
   91            | import_from

   92 import_name: "import" dotted_as_names

   93 import_points_plus: '.'
   94                   | "..."
   95                   | import_points_plus '.'
   96                   | import_points_plus "..."

   97 import_points_star: %empty
   98                   | import_points_star '.'
   99                   | import_points_star "..."

  100 import_from: "from" import_points_star dotted_name "import" '*'
  101            | "from" import_points_star dotted_name "import" '(' import_as_names ')'
  102            | "from" import_points_star dotted_name "import" import_as_names
  103            | "from" import_points_plus "import" '*'
  104            | "from" import_points_plus "import" '(' import_as_names ')'
  105            | "from" import_points_plus "import" import_as_names

  106 import_as_name: NAME
  107               | NAME "as" NAME

  108 dotted_as_name: dotted_name
  109               | dotted_name "as" NAME

  110 import_as_names: import_as_name ','
  111                | import_as_names ',' import_as_name
  112                | import_as_names ',' import_as_name ','

  113 dotted_as_names: dotted_as_name
  114                | dotted_as_names ',' dotted_as_name

  115 dotted_name: NAME
  116            | dotted_name '.' NAME

  117 global_stmt: "global" NAME
  118            | global_stmt ',' NAME

  119 nonlocal_stmt: "nonlocal" NAME
  120              | nonlocal_stmt ',' NAME

  121 assert_stmt: "assert" test
  122            | "assert" test ',' test

  123 compound_stmt: if_stmt
  124              | while_stmt
  125              | for_stmt
  126              | try_stmt
  127              | with_stmt
  128              | funcdef
  129              | classdef
  130              | decorated
  131              | async_stmt

  132 async_stmt: ASYNC funcdef
  133           | ASYNC with_stmt
  134           | ASYNC for_stmt

  135 if_stmt: "if" test ':' suite
  136        | "if" test ':' suite

  137 while_stmt: "while" test ':' suite
  138           | "while" test ':' suite "else" ':' suite

  139 for_stmt: "for" exprlist "in" testlist ':' suite
  140         | "for" exprlist "in" testlist ':' suite "else" ':' suite

  141 except_clause_plus: except_clause ':' suite
  142                   | except_clause_plus except_clause ':' suite

  143 try_stmt: "try" ':' suite except_clause_plus
  144         | "try" ':' suite except_clause_plus "else" ':' suite
  145         | "try" ':' suite except_clause_plus "finally" ':' suite
  146         | "try" ':' suite except_clause_plus "else" ':' suite "finally" ':' suite
  147         | "try" ':' suite "finally" ':' suite

  148 with_item_star: %empty
  149               | with_item_star ',' with_item

  150 with_stmt: "with" with_item with_item_star ':' suite

  151 with_item: test
  152          | test "as" expr

  153 except_clause: "except"
  154              | "except" test
  155              | "except" test "as" NAME

  156 stmt_plus: stmt
  157          | stmt_plus stmt

  158 suite: simple_stmt
  159      | NEWLINE INDENT stmt_plus DEDENT

  160 test: or_test
  161     | or_test "if" or_test "else" test
  162     | lambdef

  163 test_nocond: or_test
  164            | lambdef_nocond

  165 lambdef: "lambda" ':' test
  166        | "lambda" varargslist ':' test

  167 lambdef_nocond: "lambda" ':' test_nocond
  168               | "lambda" varargslist ':' test_nocond

  169 or_test: and_test
  170        | or_test "or" and_test

  171 and_test: not_test
  172         | and_test "and" not_test

  173 not_test: "not" not_test
  174         | comparison

  175 comparison: expr
  176           | comparison comp_op expr

  177 comp_op: '<'
  178        | '>'
  179        | "=="
  180        | ">="
  181        | "<="
  182        | "<>"
  183        | "!="
  184        | "in"
  185        | "not" "in"
  186        | "is"
  187        | "is" "not"

  188 star_expr: '*' expr

  189 expr: xor_expr
  190     | expr '|' xor_expr

  191 xor_expr: and_expr
  192         | xor_expr '^' and_expr

  193 and_expr: shift_expr
  194         | and_expr '&' shift_expr

  195 shift_expr: arith_expr
  196           | shift_expr "<<" arith_expr
  197           | shift_expr ">>" arith_expr

  198 arith_expr: term
  199           | arith_expr '+' term
  200           | arith_expr '-' term

  201 term: factor
  202     | term '*' factor
  203     | term '@' factor
  204     | term '/' factor
  205     | term '%' factor
  206     | term "//" factor

  207 factor: '+' factor
  208       | '-' factor
  209       | '~' factor
  210       | power

  211 power: atom_expr
  212      | atom_expr "**" factor

  213 atom_expr: AWAIT atom
  214          | atom
  215          | atom_expr trailer

  216 string_plus: STRING
  217            | string_plus STRING

  218 atom: '(' ')'
  219     | '(' yield_expr ')'
  220     | '(' testlist_comp ')'
  221     | '[' ']'
  222     | '[' testlist_comp ']'
  223     | '{' '}'
  224     | '{' dictorsetmaker '}'
  225     | NAME
  226     | NUMBER
  227     | string_plus
  228     | "..."
  229     | "None"
  230     | "True"
  231     | "False"

  232 testlist_comp_aux: ',' test
  233                  | ',' star_expr
  234                  | testlist_comp ',' test
  235                  | testlist_comp ',' star_expr

  236 testlist_comp: test comp_for
  237              | test testlist_comp_aux ','
  238              | test testlist_comp_aux
  239              | star_expr comp_for
  240              | star_expr testlist_comp_aux ','
  241              | star_expr testlist_comp_aux

  242 trailer: '(' ')'
  243        | '(' arglist ')'
  244        | '[' subscriptlist ']'
  245        | '.' NAME

  246 subscript_star: %empty
  247               | subscript_star ',' subscript

  248 subscriptlist: subscript subscript_star
  249              | subscript subscript_star ','

  250 subscript: test
  251          | test ':'
  252          | test ':' test
  253          | test ':' test sliceop
  254          | ':' test
  255          | ':' test sliceop
  256          | sliceop

  257 sliceop: ':'
  258        | ':' test

  259 exprlist_aux: expr
  260             | star_expr
  261             | exprlist_aux ',' expr
  262             | exprlist_aux ',' star_expr

  263 exprlist: exprlist_aux
  264         | exprlist_aux ','

  265 testlist_aux: test
  266             | testlist_aux ',' test

  267 testlist: testlist_aux ','
  268         | testlist_aux

  269 dictorsetmaker_aux: ',' test ':' test
  270                   | ',' "**" expr
  271                   | dictorsetmaker_aux ',' test ':' test
  272                   | dictorsetmaker_aux ',' "**" expr

  273 dictorsetmaker_aux2: ',' test
  274                    | ',' star_expr
  275                    | dictorsetmaker_aux2 ',' test
  276                    | dictorsetmaker_aux2 ',' star_expr

  277 dictorsetmaker: test ':' test comp_for
  278               | test ':' test dictorsetmaker_aux
  279               | test ':' test dictorsetmaker_aux ','
  280               | "**" expr comp_for
  281               | "**" expr dictorsetmaker_aux
  282               | "**" expr dictorsetmaker_aux ','
  283               | test comp_for
  284               | star_expr comp_for
  285               | test dictorsetmaker_aux2 ','
  286               | test dictorsetmaker_aux2
  287               | star_expr dictorsetmaker_aux2 ','
  288               | star_expr dictorsetmaker_aux2

  289 classdef: "class" NAME ':' suite
  290         | "class" NAME '(' ')' ':' suite
  291         | "class" NAME '(' arglist ')' ':' suite

  292 arglist_aux: argument
  293            | arglist_aux ',' argument

  294 arglist: arglist_aux ','
  295        | arglist_aux

  296 argument: test
  297         | test comp_for
  298         | test '=' test
  299         | "**" test
  300         | '*' test

  301 comp_iter: comp_for
  302          | comp_if

  303 comp_for: "for" exprlist "in" or_test
  304         | ASYNC "for" exprlist "in" or_test
  305         | "for" exprlist "in" or_test comp_iter
  306         | ASYNC "for" exprlist "in" or_test comp_iter

  307 comp_if: "if" test_nocond
  308        | "if" test_nocond comp_iter

  309 yield_expr: "yield"
  310           | "yield" yield_arg

  311 yield_arg: "from" test
  312          | testlist


Terminale, cu reguli acolo unde acestea apar

$end (0) 0
'%' (37) 205
'&' (38) 194
'(' (40) 8 9 18 19 101 104 218 219 220 242 243 290 291
')' (41) 8 9 18 19 101 104 218 219 220 242 243 290 291
'*' (42) 100 103 188 202 300
'+' (43) 199 207
',' (44) 21 22 28 29 59 60 61 110 111 112 114 118 120 122 149 232 233
    234 235 237 240 247 249 261 262 264 266 267 269 270 271 272 273
    274 275 276 279 282 285 287 293 294
'-' (45) 200 208
'.' (46) 93 95 98 116 245
'/' (47) 204
':' (58) 16 17 26 55 56 135 136 137 138 139 140 141 142 143 144 145
    146 147 150 165 166 167 168 251 252 253 254 255 257 258 269 271
    277 278 279 289 290 291
';' (59) 36 38
'<' (60) 177
'=' (61) 24 31 47 48 56 298
'>' (62) 178
'@' (64) 7 8 9 203
'[' (91) 221 222 244
']' (93) 221 222 244
'^' (94) 192
'{' (123) 223 224
'|' (124) 190
'}' (125) 223 224
'~' (126) 209
error (256)
ASYNC (258) 15 132 133 134 304 306
AWAIT (259) 213
DEDENT (260) 159
INDENT (261) 159
NEWLINE (262) 1 3 7 8 9 37 38 159
ENDMARKER (263) 5 6
NAME (264) 16 17 25 26 32 106 107 109 115 116 117 118 119 120 155 225
    245 289 290 291
NUMBER (265) 226
STRING (266) 216 217
"**" (267) 212 270 272 280 281 282 299
"//" (268) 206
">>" (269) 197
"<<" (270) 196
"def" (271) 16 17
"->" (272) 17
"+=" (273) 62
"-=" (274) 63
"*=" (275) 64
"@=" (276) 65
"/=" (277) 66
"%=" (278) 67
"&=" (279) 68
"|=" (280) 69
"^=" (281) 70
"<<=" (282) 71
">>=" (283) 72
"**=" (284) 73
"//=" (285) 74
"del" (286) 75
"pass" (287) 76
"break" (288) 82
"continue" (289) 83
"return" (290) 84 85
"raise" (291) 87 88 89
"from" (292) 89 100 101 102 103 104 105 311
"import" (293) 92 100 101 102 103 104 105
"..." (294) 94 96 99 228
"as" (295) 107 109 152 155
"global" (296) 117
"nonlocal" (297) 119
"assert" (298) 121 122
"if" (299) 135 136 161 307 308
"while" (300) 137 138
"else" (301) 138 140 144 146 161
"for" (302) 139 140 303 304 305 306
"in" (303) 139 140 184 185 303 304 305 306
"try" (304) 143 144 145 146 147
"finally" (305) 145 146 147
"with" (306) 150
"except" (307) 153 154 155
"lambda" (308) 165 166 167 168
"or" (309) 170
"and" (310) 172
"not" (311) 173 185 187
"==" (312) 179
">=" (313) 180
"<=" (314) 181
"<>" (315) 182
"!=" (316) 183
"is" (317) 186 187
"None" (318) 229
"True" (319) 230
"False" (320) 231
"class" (321) 289 290 291
"yield" (322) 309 310


Non-terminale, cu reguli acolo unde acestea apar

$accept (91)
    pe stânga: 0
file_content (92)
    pe stânga: 1 2 3 4, pe dreapta: 3 4 6
file_input (93)
    pe stânga: 5 6, pe dreapta: 0
decorator (94)
    pe stânga: 7 8 9, pe dreapta: 10 11
decorators (95)
    pe stânga: 10 11, pe dreapta: 11 12 13 14
decorated (96)
    pe stânga: 12 13 14, pe dreapta: 130
async_funcdef (97)
    pe stânga: 15, pe dreapta: 14
funcdef (98)
    pe stânga: 16 17, pe dreapta: 13 15 128 132
parameters (99)
    pe stânga: 18 19, pe dreapta: 16 17
typedargslist (100)
    pe stânga: 20 21 22, pe dreapta: 19 22
typedarg (101)
    pe stânga: 23 24, pe dreapta: 20 21 22
tfpdef (102)
    pe stânga: 25 26, pe dreapta: 23 24
varargslist (103)
    pe stânga: 27 28 29, pe dreapta: 29 166 168
vararg (104)
    pe stânga: 30 31, pe dreapta: 27 28 29
vfpdef (105)
    pe stânga: 32, pe dreapta: 30 31
stmt (106)
    pe stânga: 33 34, pe dreapta: 2 4 156 157
small_stmts_star (107)
    pe stânga: 35 36, pe dreapta: 36 37 38
simple_stmt (108)
    pe stânga: 37 38, pe dreapta: 33 158
small_stmt (109)
    pe stânga: 39 40 41 42 43 44 45 46, pe dreapta: 36 37 38
expr_aux (110)
    pe stânga: 47 48, pe dreapta: 50
expr_aux_star (111)
    pe stânga: 49 50, pe dreapta: 50 54
expr_stmt (112)
    pe stânga: 51 52 53 54, pe dreapta: 39
annassign (113)
    pe stânga: 55 56, pe dreapta: 51
testlist_star_expr (114)
    pe stânga: 57 58 59 60 61, pe dreapta: 48 51 52 53 54 59 60 61
augassign (115)
    pe stânga: 62 63 64 65 66 67 68 69 70 71 72 73 74, pe dreapta:
    52 53
del_stmt (116)
    pe stânga: 75, pe dreapta: 40
pass_stmt (117)
    pe stânga: 76, pe dreapta: 41
flow_stmt (118)
    pe stânga: 77 78 79 80 81, pe dreapta: 42
break_stmt (119)
    pe stânga: 82, pe dreapta: 77
continue_stmt (120)
    pe stânga: 83, pe dreapta: 78
return_stmt (121)
    pe stânga: 84 85, pe dreapta: 79
yield_stmt (122)
    pe stânga: 86, pe dreapta: 81
raise_stmt (123)
    pe stânga: 87 88 89, pe dreapta: 80
import_stmt (124)
    pe stânga: 90 91, pe dreapta: 43
import_name (125)
    pe stânga: 92, pe dreapta: 90
import_points_plus (126)
    pe stânga: 93 94 95 96, pe dreapta: 95 96 103 104 105
import_points_star (127)
    pe stânga: 97 98 99, pe dreapta: 98 99 100 101 102
import_from (128)
    pe stânga: 100 101 102 103 104 105, pe dreapta: 91
import_as_name (129)
    pe stânga: 106 107, pe dreapta: 110 111 112
dotted_as_name (130)
    pe stânga: 108 109, pe dreapta: 113 114
import_as_names (131)
    pe stânga: 110 111 112, pe dreapta: 101 102 104 105 111 112
dotted_as_names (132)
    pe stânga: 113 114, pe dreapta: 92 114
dotted_name (133)
    pe stânga: 115 116, pe dreapta: 7 8 9 100 101 102 108 109 116
global_stmt (134)
    pe stânga: 117 118, pe dreapta: 44 118
nonlocal_stmt (135)
    pe stânga: 119 120, pe dreapta: 45 120
assert_stmt (136)
    pe stânga: 121 122, pe dreapta: 46
compound_stmt (137)
    pe stânga: 123 124 125 126 127 128 129 130 131, pe dreapta: 34
async_stmt (138)
    pe stânga: 132 133 134, pe dreapta: 131
if_stmt (139)
    pe stânga: 135 136, pe dreapta: 123
while_stmt (140)
    pe stânga: 137 138, pe dreapta: 124
for_stmt (141)
    pe stânga: 139 140, pe dreapta: 125 134
except_clause_plus (142)
    pe stânga: 141 142, pe dreapta: 142 143 144 145 146
try_stmt (143)
    pe stânga: 143 144 145 146 147, pe dreapta: 126
with_item_star (144)
    pe stânga: 148 149, pe dreapta: 149 150
with_stmt (145)
    pe stânga: 150, pe dreapta: 127 133
with_item (146)
    pe stânga: 151 152, pe dreapta: 149 150
except_clause (147)
    pe stânga: 153 154 155, pe dreapta: 141 142
stmt_plus (148)
    pe stânga: 156 157, pe dreapta: 157 159
suite (149)
    pe stânga: 158 159, pe dreapta: 16 17 135 136 137 138 139 140
    141 142 143 144 145 146 147 150 289 290 291
test (150)
    pe stânga: 160 161 162, pe dreapta: 17 24 26 31 55 56 57 59 88
    89 121 122 135 136 137 138 151 152 154 155 161 165 166 232 234
    236 237 238 250 251 252 253 254 255 258 265 266 269 271 273 275
    277 278 279 283 285 286 296 297 298 299 300 311
test_nocond (151)
    pe stânga: 163 164, pe dreapta: 167 168 307 308
lambdef (152)
    pe stânga: 165 166, pe dreapta: 162
lambdef_nocond (153)
    pe stânga: 167 168, pe dreapta: 164
or_test (154)
    pe stânga: 169 170, pe dreapta: 160 161 163 170 303 304 305 306
and_test (155)
    pe stânga: 171 172, pe dreapta: 169 170 172
not_test (156)
    pe stânga: 173 174, pe dreapta: 171 172 173
comparison (157)
    pe stânga: 175 176, pe dreapta: 174 176
comp_op (158)
    pe stânga: 177 178 179 180 181 182 183 184 185 186 187, pe dreapta:
    176
star_expr (159)
    pe stânga: 188, pe dreapta: 58 60 233 235 239 240 241 260 262
    274 276 284 287 288
expr (160)
    pe stânga: 189 190, pe dreapta: 152 175 176 188 190 259 261 270
    272 280 281 282
xor_expr (161)
    pe stânga: 191 192, pe dreapta: 189 190 192
and_expr (162)
    pe stânga: 193 194, pe dreapta: 191 192 194
shift_expr (163)
    pe stânga: 195 196 197, pe dreapta: 193 194 196 197
arith_expr (164)
    pe stânga: 198 199 200, pe dreapta: 195 196 197 199 200
term (165)
    pe stânga: 201 202 203 204 205 206, pe dreapta: 198 199 200 202
    203 204 205 206
factor (166)
    pe stânga: 207 208 209 210, pe dreapta: 201 202 203 204 205 206
    207 208 209 212
power (167)
    pe stânga: 211 212, pe dreapta: 210
atom_expr (168)
    pe stânga: 213 214 215, pe dreapta: 211 212 215
string_plus (169)
    pe stânga: 216 217, pe dreapta: 217 227
atom (170)
    pe stânga: 218 219 220 221 222 223 224 225 226 227 228 229 230
    231, pe dreapta: 213 214
testlist_comp_aux (171)
    pe stânga: 232 233 234 235, pe dreapta: 237 238 240 241
testlist_comp (172)
    pe stânga: 236 237 238 239 240 241, pe dreapta: 220 222 234 235
trailer (173)
    pe stânga: 242 243 244 245, pe dreapta: 215
subscript_star (174)
    pe stânga: 246 247, pe dreapta: 247 248 249
subscriptlist (175)
    pe stânga: 248 249, pe dreapta: 244
subscript (176)
    pe stânga: 250 251 252 253 254 255 256, pe dreapta: 247 248 249
sliceop (177)
    pe stânga: 257 258, pe dreapta: 253 255 256
exprlist_aux (178)
    pe stânga: 259 260 261 262, pe dreapta: 261 262 263 264
exprlist (179)
    pe stânga: 263 264, pe dreapta: 75 139 140 303 304 305 306
testlist_aux (180)
    pe stânga: 265 266, pe dreapta: 266 267 268
testlist (181)
    pe stânga: 267 268, pe dreapta: 53 85 139 140 312
dictorsetmaker_aux (182)
    pe stânga: 269 270 271 272, pe dreapta: 271 272 278 279 281 282
dictorsetmaker_aux2 (183)
    pe stânga: 273 274 275 276, pe dreapta: 275 276 285 286 287 288
dictorsetmaker (184)
    pe stânga: 277 278 279 280 281 282 283 284 285 286 287 288, pe dreapta:
    224
classdef (185)
    pe stânga: 289 290 291, pe dreapta: 12 129
arglist_aux (186)
    pe stânga: 292 293, pe dreapta: 293 294 295
arglist (187)
    pe stânga: 294 295, pe dreapta: 9 243 291
argument (188)
    pe stânga: 296 297 298 299 300, pe dreapta: 292 293
comp_iter (189)
    pe stânga: 301 302, pe dreapta: 305 306 308
comp_for (190)
    pe stânga: 303 304 305 306, pe dreapta: 236 239 277 280 283 284
    297 301
comp_if (191)
    pe stânga: 307 308, pe dreapta: 302
yield_expr (192)
    pe stânga: 309 310, pe dreapta: 47 52 86 219
yield_arg (193)
    pe stânga: 311 312, pe dreapta: 310


State 0

    0 $accept: . file_input $end

    ASYNC       shift, şi mergi în starea 1
    AWAIT       shift, şi mergi în starea 2
    NEWLINE     shift, şi mergi în starea 3
    ENDMARKER   shift, şi mergi în starea 4
    NAME        shift, şi mergi în starea 5
    NUMBER      shift, şi mergi în starea 6
    STRING      shift, şi mergi în starea 7
    '~'         shift, şi mergi în starea 8
    '+'         shift, şi mergi în starea 9
    '-'         shift, şi mergi în starea 10
    '@'         shift, şi mergi în starea 11
    '('         shift, şi mergi în starea 12
    "def"       shift, şi mergi în starea 13
    "del"       shift, şi mergi în starea 14
    "pass"      shift, şi mergi în starea 15
    "break"     shift, şi mergi în starea 16
    "continue"  shift, şi mergi în starea 17
    "return"    shift, şi mergi în starea 18
    "raise"     shift, şi mergi în starea 19
    "from"      shift, şi mergi în starea 20
    "import"    shift, şi mergi în starea 21
    "..."       shift, şi mergi în starea 22
    '*'         shift, şi mergi în starea 23
    "global"    shift, şi mergi în starea 24
    "nonlocal"  shift, şi mergi în starea 25
    "assert"    shift, şi mergi în starea 26
    "if"        shift, şi mergi în starea 27
    "while"     shift, şi mergi în starea 28
    "for"       shift, şi mergi în starea 29
    "try"       shift, şi mergi în starea 30
    "with"      shift, şi mergi în starea 31
    "lambda"    shift, şi mergi în starea 32
    "not"       shift, şi mergi în starea 33
    '['         shift, şi mergi în starea 34
    '{'         shift, şi mergi în starea 35
    "None"      shift, şi mergi în starea 36
    "True"      shift, şi mergi în starea 37
    "False"     shift, şi mergi în starea 38
    "class"     shift, şi mergi în starea 39
    "yield"     shift, şi mergi în starea 40

    file_content        mergi în starea 41
    file_input          mergi în starea 42
    decorator           mergi în starea 43
    decorators          mergi în starea 44
    decorated           mergi în starea 45
    funcdef             mergi în starea 46
    stmt                mergi în starea 47
    simple_stmt         mergi în starea 48
    small_stmt          mergi în starea 49
    expr_stmt           mergi în starea 50
    testlist_star_expr  mergi în starea 51
    del_stmt            mergi în starea 52
    pass_stmt           mergi în starea 53
    flow_stmt           mergi în starea 54
    break_stmt          mergi în starea 55
    continue_stmt       mergi în starea 56
    return_stmt         mergi în starea 57
    yield_stmt          mergi în starea 58
    raise_stmt          mergi în starea 59
    import_stmt         mergi în starea 60
    import_name         mergi în starea 61
    import_from         mergi în starea 62
    global_stmt         mergi în starea 63
    nonlocal_stmt       mergi în starea 64
    assert_stmt         mergi în starea 65
    compound_stmt       mergi în starea 66
    async_stmt          mergi în starea 67
    if_stmt             mergi în starea 68
    while_stmt          mergi în starea 69
    for_stmt            mergi în starea 70
    try_stmt            mergi în starea 71
    with_stmt           mergi în starea 72
    test                mergi în starea 73
    lambdef             mergi în starea 74
    or_test             mergi în starea 75
    and_test            mergi în starea 76
    not_test            mergi în starea 77
    comparison          mergi în starea 78
    star_expr           mergi în starea 79
    expr                mergi în starea 80
    xor_expr            mergi în starea 81
    and_expr            mergi în starea 82
    shift_expr          mergi în starea 83
    arith_expr          mergi în starea 84
    term                mergi în starea 85
    factor              mergi în starea 86
    power               mergi în starea 87
    atom_expr           mergi în starea 88
    string_plus         mergi în starea 89
    atom                mergi în starea 90
    classdef            mergi în starea 91
    yield_expr          mergi în starea 92


State 1

  132 async_stmt: ASYNC . funcdef
  133           | ASYNC . with_stmt
  134           | ASYNC . for_stmt

    "def"   shift, şi mergi în starea 13
    "for"   shift, şi mergi în starea 29
    "with"  shift, şi mergi în starea 31

    funcdef    mergi în starea 93
    for_stmt   mergi în starea 94
    with_stmt  mergi în starea 95


State 2

  213 atom_expr: AWAIT . atom

    NAME     shift, şi mergi în starea 5
    NUMBER   shift, şi mergi în starea 6
    STRING   shift, şi mergi în starea 7
    '('      shift, şi mergi în starea 12
    "..."    shift, şi mergi în starea 22
    '['      shift, şi mergi în starea 34
    '{'      shift, şi mergi în starea 35
    "None"   shift, şi mergi în starea 36
    "True"   shift, şi mergi în starea 37
    "False"  shift, şi mergi în starea 38

    string_plus  mergi în starea 89
    atom         mergi în starea 96


State 3

    1 file_content: NEWLINE .

    $implicit  reduce folosind regula 1 (file_content)


State 4

    5 file_input: ENDMARKER .

    $implicit  reduce folosind regula 5 (file_input)


State 5

  225 atom: NAME .

    $implicit  reduce folosind regula 225 (atom)


State 6

  226 atom: NUMBER .

    $implicit  reduce folosind regula 226 (atom)


State 7

  216 string_plus: STRING .

    $implicit  reduce folosind regula 216 (string_plus)


State 8

  209 factor: '~' . factor

    AWAIT    shift, şi mergi în starea 2
    NAME     shift, şi mergi în starea 5
    NUMBER   shift, şi mergi în starea 6
    STRING   shift, şi mergi în starea 7
    '~'      shift, şi mergi în starea 8
    '+'      shift, şi mergi în starea 9
    '-'      shift, şi mergi în starea 10
    '('      shift, şi mergi în starea 12
    "..."    shift, şi mergi în starea 22
    '['      shift, şi mergi în starea 34
    '{'      shift, şi mergi în starea 35
    "None"   shift, şi mergi în starea 36
    "True"   shift, şi mergi în starea 37
    "False"  shift, şi mergi în starea 38

    factor       mergi în starea 97
    power        mergi în starea 87
    atom_expr    mergi în starea 88
    string_plus  mergi în starea 89
    atom         mergi în starea 90


State 9

  207 factor: '+' . factor

    AWAIT    shift, şi mergi în starea 2
    NAME     shift, şi mergi în starea 5
    NUMBER   shift, şi mergi în starea 6
    STRING   shift, şi mergi în starea 7
    '~'      shift, şi mergi în starea 8
    '+'      shift, şi mergi în starea 9
    '-'      shift, şi mergi în starea 10
    '('      shift, şi mergi în starea 12
    "..."    shift, şi mergi în starea 22
    '['      shift, şi mergi în starea 34
    '{'      shift, şi mergi în starea 35
    "None"   shift, şi mergi în starea 36
    "True"   shift, şi mergi în starea 37
    "False"  shift, şi mergi în starea 38

    factor       mergi în starea 98
    power        mergi în starea 87
    atom_expr    mergi în starea 88
    string_plus  mergi în starea 89
    atom         mergi în starea 90


State 10

  208 factor: '-' . factor

    AWAIT    shift, şi mergi în starea 2
    NAME     shift, şi mergi în starea 5
    NUMBER   shift, şi mergi în starea 6
    STRING   shift, şi mergi în starea 7
    '~'      shift, şi mergi în starea 8
    '+'      shift, şi mergi în starea 9
    '-'      shift, şi mergi în starea 10
    '('      shift, şi mergi în starea 12
    "..."    shift, şi mergi în starea 22
    '['      shift, şi mergi în starea 34
    '{'      shift, şi mergi în starea 35
    "None"   shift, şi mergi în starea 36
    "True"   shift, şi mergi în starea 37
    "False"  shift, şi mergi în starea 38

    factor       mergi în starea 99
    power        mergi în starea 87
    atom_expr    mergi în starea 88
    string_plus  mergi în starea 89
    atom         mergi în starea 90


State 11

    7 decorator: '@' . dotted_name NEWLINE
    8          | '@' . dotted_name '(' ')' NEWLINE
    9          | '@' . dotted_name '(' arglist ')' NEWLINE

    NAME  shift, şi mergi în starea 100

    dotted_name  mergi în starea 101


State 12

  218 atom: '(' . ')'
  219     | '(' . yield_expr ')'
  220     | '(' . testlist_comp ')'

    AWAIT     shift, şi mergi în starea 2
    NAME      shift, şi mergi în starea 5
    NUMBER    shift, şi mergi în starea 6
    STRING    shift, şi mergi în starea 7
    '~'       shift, şi mergi în starea 8
    '+'       shift, şi mergi în starea 9
    '-'       shift, şi mergi în starea 10
    '('       shift, şi mergi în starea 12
    ')'       shift, şi mergi în starea 102
    "..."     shift, şi mergi în starea 22
    '*'       shift, şi mergi în starea 23
    "lambda"  shift, şi mergi în starea 32
    "not"     shift, şi mergi în starea 33
    '['       shift, şi mergi în starea 34
    '{'       shift, şi mergi în starea 35
    "None"    shift, şi mergi în starea 36
    "True"    shift, şi mergi în starea 37
    "False"   shift, şi mergi în starea 38
    "yield"   shift, şi mergi în starea 40

    test           mergi în starea 103
    lambdef        mergi în starea 74
    or_test        mergi în starea 75
    and_test       mergi în starea 76
    not_test       mergi în starea 77
    comparison     mergi în starea 78
    star_expr      mergi în starea 104
    expr           mergi în starea 80
    xor_expr       mergi în starea 81
    and_expr       mergi în starea 82
    shift_expr     mergi în starea 83
    arith_expr     mergi în starea 84
    term           mergi în starea 85
    factor         mergi în starea 86
    power          mergi în starea 87
    atom_expr      mergi în starea 88
    string_plus    mergi în starea 89
    atom           mergi în starea 90
    testlist_comp  mergi în starea 105
    yield_expr     mergi în starea 106


State 13

   16 funcdef: "def" . NAME parameters ':' suite
   17        | "def" . NAME parameters "->" test ':' suite

    NAME  shift, şi mergi în starea 107


State 14

   75 del_stmt: "del" . exprlist

    AWAIT    shift, şi mergi în starea 2
    NAME     shift, şi mergi în starea 5
    NUMBER   shift, şi mergi în starea 6
    STRING   shift, şi mergi în starea 7
    '~'      shift, şi mergi în starea 8
    '+'      shift, şi mergi în starea 9
    '-'      shift, şi mergi în starea 10
    '('      shift, şi mergi în starea 12
    "..."    shift, şi mergi în starea 22
    '*'      shift, şi mergi în starea 23
    '['      shift, şi mergi în starea 34
    '{'      shift, şi mergi în starea 35
    "None"   shift, şi mergi în starea 36
    "True"   shift, şi mergi în starea 37
    "False"  shift, şi mergi în starea 38
